2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/07_print.deca
// Description:
//    Programme avec print simple d'une chaine de caractère
// Resultats:
//    affiche Bonjour tout le monde !
//
// Historique:
//    cree le 21/12/2023


{
    print("Bonjour tout le monde !");
}