2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/10_un_nombre_de_doubleguill_plus_grand_que_bslash_protegeant.deca
// Description:
//    Programme avec un nombre de " plus grand que le \ protégeant  
//
// Resultats:
//    Erreur syntaxique :10:21: token recognition error at: '");\n}', le dernier " n'est pas protégé
//
// Historique:
//    cree le 20/12/2023
{
    print("Hello \"" ");
}